# aiusagebar

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  build.rs  claude-setup.md  cliff.toml  copilot-setup.md
docs/kanban/: about-icon-version.md  about-window.md  accessibility-labels.md  api-error-backoff.md  auto-update-check.md  cache-tray-icon-bitmap.md  claude-account-identity.md  claude-reset-local-tz.md  copilot-multi-account-error-display.md  copilot-provider-name-dispatch.md  copilot-reset-local-tz.md  copy-row-to-clipboard.md  dedup-http-and-menu-actions.md  details-submenu.md  diag-instrumentation-sweep.md  diagnostic-log-service.md  dmg-app-bundle-distribution.md  fetch-off-event-loop.md  fix-backoff-on-success-timer.md  fix-backoff-tight-loop-on-error.md  fix-refresh-item-clickability.md  gh-action-release-on-tag.md  idiomatic-rust-cleanups.md  keychain-single-prompt.md  launch-at-login.md  non-provider-diag-gaps.md  onboarding-empty-state.md  polling-mechanism-and-settings.md  provider-error-boundary-diag.md  raw-json-details-window.md  readme-revamp.md  release-sh-hardening.md  release-sign-notarize-dmg.md  reuse-reqwest-client.md  second-provider-codex-or-copilot.md  strip-release-binary.md  sync-global-backoff.md  token-rotation-detection.md  trim-reqwest-features.md  ui-aesthetics-redesign.md  (+7 more)
docs/kanban/archive/: 2026-06-11-ui-aesthetics-redesign.md
docs/kanban/backlog/: 2026-06-13-network-reachability-refresh.md  2026-06-13-panic-hook-log.md  2026-06-13-refresh-keyboard-shortcut.md  2026-06-13-release-notarize-dmg.md  2026-06-13-skip-refresh-display-asleep.md  2026-06-13-sleep-wake-hook.md  2026-06-13-threshold-notification.md  2026-06-15-keychain-single-prompt.md
docs/kanban/doing/: 2026-06-23-centralize-config-constants.md  2026-06-26-claude-enterprise-usage-parse.md
docs/kanban/done/: 2026-06-10-polling-mechanism-and-settings.md  2026-06-12-ui-progress-bars.md  2026-06-13-api-error-backoff.md  2026-06-13-auto-update-check.md  2026-06-13-claude-reset-local-tz.md  2026-06-13-strip-release-binary.md  2026-06-17-fix-resets-at-null-crash.md  (+5 more)
scripts/: gen_icons.py  release.sh
src/: about.rs  backoff.rs  clipboard.rs  details.rs  diag.rs  http.rs  icon.rs  keychain.rs  launch_at_login.rs  main.rs  settings.rs  update_check.rs  version.rs
src/provider/: claude.rs  copilot.rs  mod.rs
src/ui/: base.rs  claude.rs  copilot.rs  mod.rs  styled.rs  time.rs
(+78 files in other folders)
