[package]
name = "aiusagebar"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.19"
winit = { version = "0.30", features = ["rwh_06"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
security-framework = "3"
