[package]
name = "aiusagebar"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.19"
winit = { version = "0.30", features = ["rwh_06"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
core-foundation = "0.9"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSAlert", "NSTextField", "NSControl", "NSView", "NSText"] }
objc2-foundation = "0.3"

[build-dependencies]
vergen-git2 = "1"
